# accounting-assistant

./: .mcp.json  .oxfmtrc.jsonc  .oxlintrc.json  CLAUDE.md  LICENSE  README.md  components.json  index.html  oxlint.json  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json  vite.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: accounting.rs  accounting_book.rs  attachment.rs  category.rs  chat.rs  config.rs  customer.rs  demo.rs  llm.rs  mod.rs  order.rs  product.rs  sidecar.rs
src-tauri/src/db/: connection.rs
src-tauri/src/entity/: accounting_book.rs  accounting_book_seq.rs  accounting_record.rs  accounting_record_seq.rs  attachment.rs  category.rs  category_seq.rs  chat_message.rs  chat_message_seq.rs  chat_session.rs  customer.rs  customer_seq.rs  mod.rs  order.rs  order_item.rs  order_seq.rs  prelude.rs  product.rs  product_seq.rs  section_summary.rs  tasks.rs
src-tauri/src/enums/: accounting.rs  chat.rs  customer.rs  mod.rs  order.rs  order_sub_type.rs
src-tauri/src/services/: attachment.rs  attachment_storage.rs  llm_service.rs  mod.rs
src-tauri/src/services/accounting/: dto.rs  mod.rs  service.rs
src-tauri/src/services/accounting_book/: dto.rs  mod.rs  (+1 more)
src-tauri/src/sidecar/: README.md  client.rs  error.rs  ipc.rs  manager.rs  mod.rs
src-tauri/tests/: context.rs  mod.rs
src-tauri/tests/services/: accounting_book_test.rs  accounting_test.rs  attachment_test.rs  category_test.rs  customer_test.rs  mod.rs  order_test.rs  product_test.rs
(+534 files in other folders)
