[package]
name = "accounting-assistant"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "accounting_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "2.0.0-rc.28", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "entity-registry", "schema-sync"] }
tokio = { version = "1", features = ["full"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = "1.35"
strum = { version = "0.26", features = ["derive"] }
async-trait = "0.1.83"
tauri-plugin-shell = "2.3.5"
uuid = { version = "1.0", features = ["v4"] }
thiserror = "1.0"
reqwest = { version = "0.13.2", features = ["stream"] }
futures = "0.3"
async-stream = "0.3"
bytes = "1"

[env]
SILICONFLOW_API_KEY = { value = "", unset = "remove" }
SILICONFLOW_BASE_URL = { value = "https://api.siliconflow.cn/v1", unset = "remove" }
